--- a/css/homepage.css
+++ b/css/homepage.css
@@ -216,6 +216,14 @@
   }
 }
 
+#project-1 {
+    background-image: url("../img/matrix-photo-1.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+}
+
 .signup-section {
   padding: 10rem 0;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("../img/home-footer-image.jpg");
